feat: add w1-2 test && w2-1 work

--- a/w2-1/package.json
+++ b/w2-1/package.json
@@ -5,9 +5,6 @@
     "hardhat": "^2.13.0"
   },
   "dependencies": {
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "chai": "^4.3.7",
-    "dotenv": "^16.0.3"
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6"
   }
 }
